--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Visualizaciones de Ejemplo</title>
+  <style>
+    /* Hace que las imágenes no excedan el ancho del contenedor */
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+  </style>
 </head>
 <body>
 
@@ -13,7 +22,7 @@
   <img src="images/gauge_felicidad_espana_2024_semicircular.png" alt="Gauge Felicidad España">
 
   <h1>Beeswarm Plot - Palmer Penguins</h1>
-  <img src="distribucion_longitud_pico_palmer_penguins.png" alt="Beeswarm Palmer Penguins">
+  <img src="images/distribucion_longitud_pico_palmer_penguins.png" alt="Beeswarm Palmer Penguins">
 
 </body>
 </html>
